// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage rendered right 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="NavBar"
    >
      <div
        className="title"
      >
        this.jobs
      </div>
      <div
        className="SearchBar"
      >
        <div
          className="searchBar"
        >
          <input
            placeholder="Search"
            type="text"
          />
          <a
            href="/search"
            onClick={[Function]}
          >
            <img
              className="SearchIcon"
              src="search-outline.svg"
            />
          </a>
        </div>
      </div>
      <div
        className="iconsHolder"
      >
        <a
          className="linkDisplay home"
          href="/home"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="house_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Home
            </p>
          </div>
        </a>
        <a
          className="linkDisplay connections "
          href="/connections"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="people_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Connections
            </p>
          </div>
        </a>
        <a
          className="linkDisplay jobs"
          href="/jobs"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="work_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Jobs
            </p>
          </div>
        </a>
        <a
          className="linkDisplay settings"
          href="/settings"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="settings_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Settings
            </p>
          </div>
        </a>
        <a
          className="linkDisplay logout"
          href="/"
          onClick={[Function]}
        >
          <div
            className="iconsDisplay"
          >
            <img
              alt="Home"
              className="iconsImages"
              src="logout_white_1.png"
            />
            <p
              className="iconLabel"
            >
              Logout
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="PostBox container"
  >
    <div>
      <input
        className="commentBox"
        onChange={[Function]}
        placeholder="What's on your mind?"
      />
    </div>
    <div
      className="buttons"
    >
      <div
        className="dropdown"
      >
        <select
          className="dropbtn"
          onChange={[Function]}
        >
          <option
            value="1"
          >
            Select Tag
          </option>
          <option
            value="Job-Recruitment"
          >
            Job-Recruitment
          </option>
          <option
            value="Knowledge Sharing"
          >
            Knowledge Sharing
          </option>
          <option
            value="Inspiration"
          >
            Inspiration
          </option>
          <option
            value="Others"
          >
            Others
          </option>
        </select>
      </div>
      <button
        className="sc-bdvvtL hvLuUM"
        onClick={[Function]}
      >
        <img
          alt=""
          className="images"
          src="camera-outline.svg"
        />
      </button>
      <input
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
      <button
        className="sc-bdvvtL hvLuUM"
        onClick={[Function]}
      >
        <img
          alt=""
          className="images"
          src="document-attach-outline.svg"
        />
      </button>
      <input
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
      <button
        className="sc-bdvvtL hvLuUM"
        onClick={[Function]}
      >
        <img
          alt=""
          className="images"
          src="link-outline.svg"
        />
      </button>
      <input
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
      <button
        className="icon btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <img
          alt=""
          className="images"
          src="send-outline.svg"
        />
      </button>
    </div>
  </div>
  <div
    className="displayError"
  >
    <p>
      Looks like our server is not responding.
    </p>
    <p>
      Please try again.
    </p>
  </div>
</div>
`;

exports[`Navbar rendered right 1`] = `
<div>
  <div
    className="NavBar"
  >
    <div
      className="title"
    >
      this.jobs
    </div>
    <div
      className="SearchBar"
    >
      <div
        className="searchBar"
      >
        <input
          placeholder="Search"
          type="text"
        />
        <a
          href="/search"
          onClick={[Function]}
        >
          <img
            className="SearchIcon"
            src="search-outline.svg"
          />
        </a>
      </div>
    </div>
    <div
      className="iconsHolder"
    >
      <a
        className="linkDisplay home"
        href="/home"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="house_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Home
          </p>
        </div>
      </a>
      <a
        className="linkDisplay connections "
        href="/connections"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="people_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Connections
          </p>
        </div>
      </a>
      <a
        className="linkDisplay jobs"
        href="/jobs"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="work_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Jobs
          </p>
        </div>
      </a>
      <a
        className="linkDisplay settings"
        href="/settings"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="settings_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Settings
          </p>
        </div>
      </a>
      <a
        className="linkDisplay logout"
        href="/"
        onClick={[Function]}
      >
        <div
          className="iconsDisplay"
        >
          <img
            alt="Home"
            className="iconsImages"
            src="logout_white_1.png"
          />
          <p
            className="iconLabel"
          >
            Logout
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`PostBox rendered right 1`] = `
<div
  className="PostBox container"
>
  <div>
    <input
      className="commentBox"
      onChange={[Function]}
      placeholder="What's on your mind?"
    />
  </div>
  <div
    className="buttons"
  >
    <div
      className="dropdown"
    >
      <select
        className="dropbtn"
        onChange={[Function]}
      >
        <option
          value="1"
        >
          Select Tag
        </option>
        <option
          value="Job-Recruitment"
        >
          Job-Recruitment
        </option>
        <option
          value="Knowledge Sharing"
        >
          Knowledge Sharing
        </option>
        <option
          value="Inspiration"
        >
          Inspiration
        </option>
        <option
          value="Others"
        >
          Others
        </option>
      </select>
    </div>
    <button
      className="sc-bdvvtL hvLuUM"
      onClick={[Function]}
    >
      <img
        alt=""
        className="images"
        src="camera-outline.svg"
      />
    </button>
    <input
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
    <button
      className="sc-bdvvtL hvLuUM"
      onClick={[Function]}
    >
      <img
        alt=""
        className="images"
        src="document-attach-outline.svg"
      />
    </button>
    <input
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
    <button
      className="sc-bdvvtL hvLuUM"
      onClick={[Function]}
    >
      <img
        alt=""
        className="images"
        src="link-outline.svg"
      />
    </button>
    <input
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
    <button
      className="icon btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="submit"
    >
      <img
        alt=""
        className="images"
        src="send-outline.svg"
      />
    </button>
  </div>
</div>
`;

exports[`PostCard rendered right 1`] = `
<div
  className="displayError"
>
  <p>
    Looks like our server is not responding.
  </p>
  <p>
    Please try again.
  </p>
</div>
`;
